<resources>
    <string name="app_name">Roomie</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_messages">Messages</string>
    <string name="title_feed">Profile</string>

    <!-- (If you haven’t already) other labels -->
    <string name="title_settings">Settings</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_add_house">Add House</string>

    <string name="cd_settings">Open settings</string>
    <string name="cd_edit_profile">Edit profile</string>
    <string name="cd_add_house">Add a house</string>

    <!-- placeholders -->
    <string name="placeholder_name_age">Name, Age</string>

    <!-- Accessibility -->
    <string name="desc_filter_form">Filter criteria form</string>

    <!-- Labels & hints -->
    <string name="filter_title">Type your filters</string>
    <string name="hint_address">Street, Number, Area</string>
    <string name="hint_price_from">€ From</string>
    <string name="hint_price_to">€ To</string>
    <string name="hint_area_from">m² From</string>
    <string name="hint_area_to">m² To</string>
    <string name="search_button">Search</string>


</resources>