<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"/>
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_person_search"
        android:title="@string/title_search"/>
    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/title_favorites"/>
    <item
        android:id="@+id/nav_messages"
        android:icon="@drawable/ic_message"
        android:title="@string/title_messages"/>
    <item
        android:id="@+id/nav_feed"
        android:icon="@drawable/ic_feed"
        android:title="@string/title_feed"/>
</menu>
